--- a/GoDeliverFrontEnd/src/app/registration/registration.component.html
+++ b/GoDeliverFrontEnd/src/app/registration/registration.component.html
@@ -1,18 +1,11 @@
 <!-- User registration HTML page-->
 <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
 <script src="node_modules/systemjs/dist/system.js"></script>
-<div class="row">
-  <div class="page-bg"></div>
-  <!-- <div class="col-sm-7">
-    <img class="img-responsive" src="assets/home.jpeg" style="width:800px;height:520px;">
-  </div>  -->
-  <div class="registercard">
-    <!-- form class for displaying the Registration page for user  uSing angularmaterial-->
 
 <div class="component-body">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-6 col-md-offset-3">
+      <div class="col-md-8 col-md-offset-2">
         <!-- form class for displaying the Registration page for user  uSing angularmaterial-->
         <mat-card>
           <mat-horizontal-stepper [linear]="isLinear" #stepper>
@@ -48,14 +41,18 @@
 
             <mat-step [stepControl]="userForm">
               <form [formGroup]="userForm" (ngSubmit)="preferencesSubmit()">
+                <div class="container-fluid container-card">
+                <div class="row justify-content-center">
                   <div *ngFor="let genre of genreList" class="step2">
-                    <div class="col-lg-3">
+                    <div class="col-md-2">
                     <mat-card id="{{genre.card}}" class="option-cards" (click)="onclick(genre.id,genre.click,genre.name)">
                       <img mat-card-image src="{{genre.img}}" alt="movie genre">
                       <mat-card-title class="option">{{genre.name}}</mat-card-title>
                     </mat-card>
                   </div>
                   </div>
+                  </div>
+                </div>
 
                 <div class="reg">
                   <button class="button" mat-raised-button>
