--- a/GoDeliverFrontEnd/src/styles.css
+++ b/GoDeliverFrontEnd/src/styles.css
@@ -2,4 +2,5 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 body{
+    margin: 0 auto;
 }
