added uuid for unregistered user

--- a/GoDeliverFrontEnd/src/app/header/header.component.html
+++ b/GoDeliverFrontEnd/src/app/header/header.component.html
@@ -57,7 +57,7 @@
           </div>
         </li>
         <li *ngIf=curUser class="nav-item">
-          <a class="nav-link " (click)="wishlistRoute()" href="#">Wishlist</a>
+          <a class="nav-link " (click)="wishlistRoute()">Wishlist</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" (click)="cartRoute()" style="cursor:pointer">
