--- a/GoDeliverFrontEnd/src/app/cart/cart.component.html
+++ b/GoDeliverFrontEnd/src/app/cart/cart.component.html
@@ -1,3 +1,4 @@
+<div class="component-body">
 <div *ngIf="carts.length!=0;else test">
   <div class=" container">
     <table class="table table-striped table-hover ">
@@ -57,3 +58,5 @@
   </div>
   <img src="assets/cartempty.svg" class="img-responsive" />
 </div> -->
+
+</div>
