--- a/GoDeliverFrontEnd/src/app/registration/registration.component.css
+++ b/GoDeliverFrontEnd/src/app/registration/registration.component.css
@@ -7,7 +7,7 @@
   margin: 0 auto;
   height: 100vh;
   width: 100%;
-  background-image : url(../../assets/wall.gif);
+  /* background-image : url(../../assets/wall.gif); */
  background-size: contain;
  background-repeat: no-repeat
 }
