--- a/GoDeliverFrontEnd/src/app/header/header.component.html
+++ b/GoDeliverFrontEnd/src/app/header/header.component.html
@@ -1,7 +1,8 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light m-0" id="nav">
     <a class="navbar-brand" routerLink="">
-      <img src="assets/books.ico" alt="logo" style="width:40px;">
+      <img src="assets/books.ico" alt="logo" style="width:35px; display: inline-block;">
+      BooK<span class="logo-style">ShoP</span>
     </a>
     <button class="navbar-toggler navbar-toggler-right border border-0" type="button" data-toggle="collapse" data-target="#navbar">
         <span class="navbar-toggler-icon"></span>
