--- a/GoDeliverFrontEnd/src/app/home/home.component.html
+++ b/GoDeliverFrontEnd/src/app/home/home.component.html
@@ -2,7 +2,10 @@
 
 
 <!--Searchbar for books-->
-
+<head>
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="-1">
+</head>
 <div class="row">
     <div class="col-sm-8 mb-4 center-block">
         <form>
