--- a/GoDeliverFrontEnd/src/app/header/header.component.css
+++ b/GoDeliverFrontEnd/src/app/header/header.component.css
@@ -21,3 +21,10 @@ nav{
   background-color: rgb(196, 17, 17);
   color: white;
 }
+
+.badge{
+  margin-left: 3px;
+  font-size: 12px;
+  color: white;
+  background-color: red;
+}
