--- a/GoDeliverFrontEnd/src/app/login/login.component.html
+++ b/GoDeliverFrontEnd/src/app/login/login.component.html
@@ -1,32 +1,33 @@
 <!-- Login Page authentication with username and password -->
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-sm-6 col-md-offset-3">
+<div class="component-body">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-6 col-md-offset-3">
 
-      <!--form class for username and password  using Material-->
-      <form class="example-form " [formGroup]="userForm" (ngSubmit)="loginSubmit()" style="height:70%">
-        <mat-card>
+        <!--form class for username and password  using Material-->
+        <form class="example-form " [formGroup]="userForm" (ngSubmit)="loginSubmit()" style="height:70%">
+          <mat-card>
 
-          <mat-form-field>
-            <input matInput placeholder="Enter your email" [formControl]="userEmail" name="userEmail" required>
-            <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
-          </mat-form-field>
+            <mat-form-field>
+              <input matInput placeholder="Enter your email" [formControl]="userEmail" name="userEmail" required>
+              <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+            </mat-form-field>
 
-          <mat-form-field class="example-full-width" style="margin-top:18px">
-            <input matInput type="password" placeholder="Password" [formControl]="userPassword" name="userPassword"
-              required minlength="8">
-            <mat-error *ngIf="email.invalid">{{getErrorMessage2()}}</mat-error>
-          </mat-form-field>
+            <mat-form-field class="example-full-width" style="margin-top:18px">
+              <input matInput type="password" placeholder="Password" [formControl]="userPassword" name="userPassword" required minlength="8">
+              <mat-error *ngIf="email.invalid">{{getErrorMessage2()}}</mat-error>
+            </mat-form-field>
 
-          <button class="loginButton" mat-raised-button>Login</button>
-          <br>
-          <div *ngIf="error" class="alert alert-danger">{{error}}</div>
-          <!-- Routing to signup page when the user clicks on the Signup button-->
-          <a class="register" [routerLink]="['/register']">New to GoDeliver? Sign Up!
+            <button class="loginButton" mat-raised-button>Login</button>
+            <br>
+            <div *ngIf="error" class="alert alert-danger">{{error}}</div>
+            <!-- Routing to signup page when the user clicks on the Signup button-->
+            <a class="register" [routerLink]="['/register']">New to GoDeliver? Sign Up!
           </a>
-        </mat-card>
-      </form>
-      <!--  end of form class-->
+          </mat-card>
+        </form>
+        <!--  end of form class-->
+      </div>
     </div>
   </div>
 </div>
