--- a/GoDeliverFrontEnd/src/app/cart/cart.component.html
+++ b/GoDeliverFrontEnd/src/app/cart/cart.component.html
@@ -1,58 +1,61 @@
 <div class="component-body">
-<div *ngIf="carts.length!=0;else test">
-  <div class=" container">
-    <table class="table table-striped table-hover ">
-      <thead>
-        <tr>
-          <th>Product Name</th>
-          <th>Product Price</th>
-          <th>Product Image</th>
-          <th></th>
-          <th>Qty.</th>
-        </tr>
-      </thead>
+  <div *ngIf="carts.length!=0;else test">
+    <div class=" container">
+      <div class="table-responsive">
+        <table class="table table-striped table-hover ">
+          <thead>
+            <tr>
+              <th>Product Name</th>
+              <th>Product Price</th>
+              <th>Product Image</th>
+              <th></th>
+              <th>Qty.</th>
+            </tr>
+          </thead>
 
-      <tbody>
-        <tr *ngFor="let item of carts; let i = index">
-          <td>
-            <h4>{{item.title}}</h4>
-          </td>
-          <td>
-            <h4>Rs {{item.cost}}</h4>
-          </td>
-          <td><img src={{item.poster}} width="100" height="100" /></td>
-          <td><span class="btn btn-default btn-md btn-qty" (click)="decrementQuantity($event, item)">
+          <tbody>
+            <tr *ngFor="let item of carts; let i = index">
+              <td>
+                <h4>{{item.title}}</h4>
+              </td>
+              <td>
+                <h4>Rs {{item.cost}}</h4>
+              </td>
+              <td><img src={{item.poster}} width="100" height="100" /></td>
+              <td><span class="btn btn-default btn-md btn-qty" (click)="decrementQuantity($event, item)">
               <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
-            </span><span class="btn btn-default btn-md btn-qty" (click)="incrementQuantity($event, item)">
+                </span><span class="btn btn-default btn-md btn-qty" (click)="incrementQuantity($event, item)">
               <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-            </span></td>
-          <td>{{item.quantity}}</td>
-          <td><button (click)="deleteItem($event,item)" class="btn btn-xs btn-danger">Remove Product</button></td>
-        </tr>
+                </span>
+              </td>
+              <td>{{item.quantity}}</td>
+              <td><button (click)="deleteItem($event,item)" class="btn btn-xs btn-danger">Remove Product</button></td>
+            </tr>
 
-        <tr class="warning">
-          <td>
-            <h4></h4>
-          </td>
-          <td>
-            <h4>Total Items: {{totalQuantity()}}</h4>
-          </td>
-          <td>
-            <h4>Total: Rs {{getSum()}}</h4>
-          </td>
-          <td><button class="btn btn-md btn-success"><a (click)="billingRoute()" style="color:white;">Checkout</a></button></td>
-        </tr>
-      </tbody>
-    </table>
+            <tr class="warning">
+              <td>
+                <h4></h4>
+              </td>
+              <td>
+                <h4>Total Items: {{totalQuantity()}}</h4>
+              </td>
+              <td>
+                <h4>Total: Rs {{getSum()}}</h4>
+              </td>
+              <td><button class="btn btn-md btn-success"><a (click)="billingRoute()" style="color:white;">Checkout</a></button></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
   </div>
-</div>
-<ng-template #test>
-  <div class="text-center">
-    <h1 class="italics">Your cart is empty</h1>
-  </div>
-  <img src="assets/cartempty.svg" class="img-responsive" />
-</ng-template>
-<!-- <div *ngIf=noCart>
+  <ng-template #test>
+    <div class="text-center">
+      <h1 class="italics">Your cart is empty</h1>
+    </div>
+    <img src="assets/cartempty.svg" class="img-responsive" />
+  </ng-template>
+  <!-- <div *ngIf=noCart>
   <div class="text-center">
     <h1 class="italics">Your cart is empty</h1>
   </div>
