--- a/GoDeliverFrontEnd/src/app/admin/admin.component.html
+++ b/GoDeliverFrontEnd/src/app/admin/admin.component.html
@@ -3,10 +3,11 @@
     <div class="row">
       <div class="col-sm-12">
         <mat-form-field class="example-full-width">
-          <input matInput [matDatepicker]="picker" [(ngModel)]="dateOfDelivery" name="dateOfDelivery" required placeholder="Choose a date">
+          <input matInput  (click)="onDate(dateOfDelivery)" [matDatepicker]="picker" [(ngModel)]="dateOfDelivery" name="dateOfDelivery" required placeholder="Choose a date">
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker touchUi #picker></mat-datepicker>
         </mat-form-field>
+        <button (click)="onDate()">Get Data</button>
       </div>
       <div class="col-sm-12">
         <mat-radio-group>
