--- a/GoDeliverFrontEnd/src/app/login/login.component.css
+++ b/GoDeliverFrontEnd/src/app/login/login.component.css
@@ -20,6 +20,7 @@
   position: relative;
   min-width: 100px;
   max-width: 400px;
+  height: auto;
   text-align: center;
 }
 
@@ -31,14 +32,26 @@
   letter-spacing: 2px;
 }
 
+.loginButton:hover {
+  margin: 2% 0% 5% 0%;
+  background-color: rgb(196, 17, 17,0.6);
+  color: white;
+  font-weight: 900;
+  letter-spacing: 1px;
+}
+
+
+
+
 .register {
   position: relative;
   color: blue;
 }
 mat-form-field {
-  width: 90%;
+  width: 100%;
 }
 mat-card {
-  top: 40%;
+  text-align: center;
+  top: 30%;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
