--- a/GoDeliverFrontEnd/src/app/registration/registration.component.html
+++ b/GoDeliverFrontEnd/src/app/registration/registration.component.html
@@ -3,8 +3,8 @@
 <script src="node_modules/systemjs/dist/system.js"></script>
 
 <div class="container-fluid">
-  <div class="row">
-    <div class="col-md-8 col-md-offset-2">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
       <!-- form class for displaying the Registration page for user  uSing angularmaterial-->
       <mat-card>
         <mat-horizontal-stepper [linear]="isLinear" #stepper>
