Frontend: footer fixed

--- a/GoDeliverFrontEnd/src/app/cart/cart.component.css
+++ b/GoDeliverFrontEnd/src/app/cart/cart.component.css
@@ -7,6 +7,15 @@
   color: red;
 }
 
+.fa-close:hover{
+  color: white;
+}
+
 .btn.btn-xs.btn-default{
   border-radius: 50%;
+}
+
+.btn.btn-xs.btn-default:hover{
+  border-radius: 50%;
+  background-color: red;
 }
