--- a/GoDeliverFrontEnd/src/app/home/home.component.html
+++ b/GoDeliverFrontEnd/src/app/home/home.component.html
@@ -39,7 +39,7 @@
 
     <div id="myCarousel" class="carousel slide mb-5" data-ride="carousel">
       <!-- Indicators -->
-      <ol class="carousel-indicators"
+      <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
