Frontend: css and responsivness

--- a/GoDeliverFrontEnd/src/app/header/header.component.css
+++ b/GoDeliverFrontEnd/src/app/header/header.component.css
@@ -24,3 +24,7 @@ a:hover{
   color: white;
   background-color: red;
 }
+
+nav{
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
