--- a/GoDeliverFrontEnd/src/app/header/header.component.html
+++ b/GoDeliverFrontEnd/src/app/header/header.component.html
@@ -1,11 +1,13 @@
 <header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light m-0" id="nav">
+  <nav class="navbar navbar-expand-lg bg-light m-0" id="nav">
     <a class="navbar-brand" routerLink="">
       <img src="assets/books.ico" alt="logo" style="width:35px; display: inline-block;">
       BooK<span class="logo-style">ShoP</span>
     </a>
     <button class="navbar-toggler navbar-toggler-right border border-0" type="button" data-toggle="collapse" data-target="#navbar">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon text-center">
+          <i class="fa fa-bars fa-lg"></i>
+        </span>
     </button>
 
     <div class="collapse navbar-collapse justify-content-end" id="navbar">
@@ -49,7 +51,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" (click)="cartRoute()" style="cursor:pointer">
-            <i class="fa fa-cart-plus">
+            <i class="fa fa fa-shopping-cart fa-lg">
               <span class="badge">{{cartLength}}</span>
             </i> Cart</a>
         </li>
