--- a/GoDeliverFrontEnd/src/app/cards/cards.component.css
+++ b/GoDeliverFrontEnd/src/app/cards/cards.component.css
@@ -25,24 +25,6 @@ a{
   color:red;
 }
 
-
-._svgicon {
-  padding: 10px 5px;
-  border-radius: 10px;
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .2);
-  width: 50%;
-  border: none;
-  float: left;
-  background:#2874f0;
-  color: #fff;
-}
-
-._buttonbg {
-  text-transform: uppercase;
-  font-size: 10px;
-}
-
-
 ._button {
   display: inline-block;
   font-weight: 500;
@@ -88,4 +70,13 @@ body {
 .disabled {
   background: #eee;
   color: #aaa;
+}
+
+.fa.fa-heart{
+  color: red;
+  border-color: red;
+}
+
+.fa.fa-heart-o{
+  border-color: red;
 }
