--- a/GoDeliverFrontEnd/src/app/home/home.component.html
+++ b/GoDeliverFrontEnd/src/app/home/home.component.html
@@ -37,59 +37,54 @@
   <!--carousel image1-->
   <div *ngIf=check>
 
-    <div id="myCarousel" class="carousel slide mb-5" data-ride="carousel">
+    <div id="demo" class="carousel slide mt-2 mb-2" data-ride="carousel">
+
       <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
+      <ul class="carousel-indicators">
+        <li data-target="#demo" data-slide-to="0" class="active"></li>
+        <li data-target="#demo" data-slide-to="1"></li>
+        <li data-target="#demo" data-slide-to="2"></li>
+      </ul>
 
-      <!-- Wrapper for slides -->
+      <!-- The slideshow -->
       <div class="carousel-inner">
-
-        <div class="item active">
+        <div class="carousel-item active">
           <a routerLink="/topselling">
-                    <img src="assets/images.jpg" alt="Los Angeles" style="width:100%; height:35%;max-height: 400px">
-                    <div class="carousel-caption">
-                        <h3>Top Selling</h3>
-                        <p>Best sellers of all time!</p>
-                    </div>
-                </a>
+          <img src="assets/images.jpg" alt="Los Angeles" style="width:100%; height:35%;max-height: 400px">
+          <div class="carousel-caption">
+            <h3>Top Selling</h3>
+            <p>Best sellers of all time!</p>
+          </div>
+        </a>
         </div>
-
-
-        <div class="item">
+        <div class="carousel-item">
           <a routerLink="/toprated">
-                    <img src="assets/img.jpg" alt="Chicago" style="width:100%; height: 35%; max-height: 400px">
-                    <div class="carousel-caption">
-                        <h3>Top Rated Book</h3>
-                        <p>Best rated books loved by all!</p>
-                    </div>
-                </a>
+          <img src="assets/img.jpg" alt="Chicago" style="width:100%; height: 35%; max-height: 400px">
+          <div class="carousel-caption">
+            <h3>Top Rated Book</h3>
+            <p>Best rated books loved by all!</p>
+          </div>
+        </a>
         </div>
-
-        <div class="item">
+        <div class="carousel-item">
           <a routerLink="/allbooks">
-                    <img src="assets/img1.png" alt="New York" style="width:100%;height: 35%; max-height: 400px">
-                    <div class="carousel-caption">
-                        <h3>All books</h3>
-                        <p>Have a look to all the books at once!</p>
-                    </div>
-                </a>
+          <img src="assets/img1.png" alt="New York" style="width:100%;height: 35%; max-height: 400px">
+          <div class="carousel-caption">
+            <h3>All books</h3>
+            <p>Have a look to all the books at once!</p>
+          </div>
+        </a>
         </div>
-
       </div>
 
       <!-- Left and right controls -->
-      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-      <a class="right carousel-control" href="#myCarousel" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span class="sr-only">Next</span>
-        </a>
+      <a class="carousel-control-prev" href="#demo" data-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </a>
+      <a class="carousel-control-next" href="#demo" data-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </a>
+
     </div>
 
   </div>
