--- a/GoDeliverFrontEnd/src/app/recommendations/recommendations.component.html
+++ b/GoDeliverFrontEnd/src/app/recommendations/recommendations.component.html
@@ -2,6 +2,7 @@
 
 <!-- div class to display Recomended books to the user after login-->
 <div *ngIf="recommended_books">
+<div class="container">
   <h2>Recommended Books</h2>
   <div class="row mb-3">
     <div class="col-sm-3 mb-3" *ngFor="let book of recommended_books; let i = index">
@@ -11,6 +12,9 @@
     </div>
   </div>
 </div>
+</div>
+
+<div class="container">
 <h2>Top Selling</h2>
 <!-- div class to display top selling books in home page-->
 <div class="row mb-3">
@@ -20,6 +24,9 @@
     </div>
   </div>
 </div>
+</div>
+
+<div class="container">
 <h2>Top Rated</h2>
 <!-- div class to display  top rated books in home page-->
 <div class="row mb-3">
@@ -28,4 +35,5 @@
       <app-cards [book]=book></app-cards>
     </div>
   </div>
+</div>
 </div>
