--- a/GoDeliverFrontEnd/src/app/cards/cards.component.css
+++ b/GoDeliverFrontEnd/src/app/cards/cards.component.css
@@ -16,7 +16,10 @@ a{
   font-family: 'Cinzel', serif;
   color:rgb(15, 15, 15);
   cursor: pointer;
+}
 
+.component-body{
+  box-shadow: 0 8px 8px rgba(0,0,0,0.10), 0 10px 10px rgba(0,0,0,0.20);
 }
 
 
