--- a/GoDeliverFrontEnd/src/app/cards/cards.component.html
+++ b/GoDeliverFrontEnd/src/app/cards/cards.component.html
@@ -13,7 +13,7 @@
         <span class="fa fa-shopping-cart fa-lg"></span> Quick Add
       </button>
       <div fxFlex></div>
-      <button type="button" name="button" mat-button>
+      <mat-button>
       <div *ngIf=email>
         <div *ngIf=like>
           <mat-icon class="example-icon">
@@ -28,7 +28,7 @@
           </mat-icon>
         </div>
       </div>
-      </button>
+    </mat-button>
     </mat-card-actions>
   </mat-card>
 </div>
