added routing in book component to direct billing

--- a/GoDeliverFrontEnd/src/app/book/book.component.html
+++ b/GoDeliverFrontEnd/src/app/book/book.component.html
@@ -19,7 +19,7 @@
               </button>
             </div>
             <div class="row m-3">
-              <button class="btn btn-lg btn-brand btn-block buybutton">
+              <button class="btn btn-lg btn-brand btn-block buybutton" (click)="billing()">
                 Buy Now
               </button>
             </div>
