--- a/GoDeliverFrontEnd/src/app/wishlist/wishlist.component.css
+++ b/GoDeliverFrontEnd/src/app/wishlist/wishlist.component.css
@@ -1,96 +1,91 @@
-.example-icon {
-    color: #b42929;
-}
 .spacer {
-    flex: 1 1 auto;
-  }.spacer {
-    flex: 1 1 auto;
-  }
-  .example-icon {
-    color: #b42929;
-  }
-  a{
-    cursor: pointer;
-  }
-  .fav {
-    padding-left:75%;
-    color:red;
-    cursor: pointer;
-  }
-  .title {
-    font-family: 'Cinzel', serif;
-    color:rgb(15, 15, 15);
-    cursor: pointer;
-    
-  }
-  
-  
-  /* mouse over link */
-  .title:hover {
-    color:red;
-  }
-  
-  
-  ._svgicon {
-    padding: 10px 5px;
-    border-radius: 10px;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .2);
-    width: 50%;
-    border: none;
-    float: left;
-    background:#2874f0;
-    color: #fff;
-  }
-  
-  ._buttonbg {
-    text-transform: uppercase;
-    font-size: 10px;
-  }
-  
-  
-  ._button {
-    display: inline-block;
-    font-weight: 500;
-    transition: box-shadow 0.2s ease;
-    vertical-align: super;
-    cursor: pointer;
-    outline: none;
-   
-  }
-  
-  mat-card{
-    padding-bottom: 25%
-  }
-  mat-card-subtitle{
-    font-family: 'Lora', cursive;
-    font-weight: 500;
-    font-size: 15px;
-    text-transform: capitalize;
-    color:black;
-  }
-  
-  
-  
-  body {
-    background: #F8E1C2;;
-    -webkit-font-smoothing: antialiased;
-    padding: 40px;
-    text-align: center;
-  }
-  
-  .button {
-    border: none;
-    padding: 14px;
-    color: #fff;
-    margin: 0 10px;
-    background: #3D3240;
-    font-weight: 700;
-    border-radius: 4px;
-  }
-  .active {
-    background: #FF735C;;
-  }
-  .disabled {
-    background: #eee;
-    color: #aaa;
-  }
+  flex: 1 1 auto;
+}
+.example-icon {
+  color: #b42929;
+}
+a{
+  cursor: pointer;
+}
+.fav {
+  padding-left:75%;
+  color:red;
+  cursor: pointer;
+}
+.title {
+  font-family: 'Cinzel', serif;
+  color:rgb(15, 15, 15);
+  cursor: pointer;
+}
+
+.component-body{
+  box-shadow: 0 8px 8px rgba(0,0,0,0.10), 0 10px 10px rgba(0,0,0,0.20);
+}
+
+
+/* mouse over link */
+.title:hover {
+  color:red;
+}
+
+._button {
+  display: inline-block;
+  font-weight: 500;
+  transition: box-shadow 0.2s ease;
+  vertical-align: super;
+  cursor: pointer;
+  outline: none;
+
+}
+
+mat-card{
+  padding-bottom: 25%
+}
+mat-card-subtitle{
+  font-family: 'Lora', cursive;
+  font-weight: 500;
+  font-size: 15px;
+  text-transform: capitalize;
+  color:black;
+}
+
+
+
+body {
+  background: #F8E1C2;;
+  -webkit-font-smoothing: antialiased;
+  padding: 40px;
+  text-align: center;
+}
+
+.button {
+  border: none;
+  padding: 14px;
+  color: #fff;
+  margin: 0 10px;
+  background: #3D3240;
+  font-weight: 700;
+  border-radius: 4px;
+}
+.active {
+  background: #FF735C;;
+}
+.disabled {
+  background: #eee;
+  color: #aaa;
+}
+
+.fa.fa-heart{
+  color: red;
+  border-color: red;
+}
+
+.fa.fa-heart-o{
+  border-color: red;
+}
+h2{
+  font-family: 'Metamorphous', cursive;
+}
+.component-body {
+  height: 70%;
+}
