--- a/GoDeliverFrontEnd/src/app/toprated/toprated.component.html
+++ b/GoDeliverFrontEnd/src/app/toprated/toprated.component.html
@@ -1,7 +1,9 @@
 <div class=container>
   <div *ngIf=books>
-    <div class="col-sm-3 mb-5" *ngFor="let book of books | paginate: { itemsPerPage: 8, currentPage: p }">
-      <app-cards [book]=book></app-cards>
+    <div class="row mb-3">
+      <div class="col-sm-3 mb-5" *ngFor="let book of books | paginate: { itemsPerPage: 8, currentPage: p }">
+        <app-cards [book]=book></app-cards>
+      </div>
     </div>
     <div class="text-center">
       <pagination-controls (pageChange)="p =$event"></pagination-controls>
