Frontend: added hover effects for cards

--- a/GoDeliverFrontEnd/src/app/billing/billing.component.html
+++ b/GoDeliverFrontEnd/src/app/billing/billing.component.html
@@ -1,4 +1,6 @@
+<div class="component-body">
 <div class="container-fluid">
+<div class="row">
   <div class="col-sm-6">
     <div *ngIf="addressList">
       <h2 style="margin-left:10px">Delivery Details</h2>
@@ -54,7 +56,7 @@
       </mat-expansion-panel>
     </mat-accordion>
   </div>
-  <div class="col-sm-5">
+  <div class="col-sm-6">
     <mat-card>
       <mat-card-title>
         <b>Order Details</b>
@@ -92,4 +94,6 @@
       </mat-card-content>
     </mat-card>
   </div>
+</div>
+</div>
 </div>
