--- a/GoDeliverFrontEnd/src/app/cards/cards.component.css
+++ b/GoDeliverFrontEnd/src/app/cards/cards.component.css
@@ -22,6 +22,10 @@ a{
   box-shadow: 0 8px 8px rgba(0,0,0,0.10), 0 10px 10px rgba(0,0,0,0.20);
 }
 
+.component-body:hover{
+  box-shadow: 0 8px 8px rgba(0,0,0,0.20), 0 10px 10px rgba(0,0,0,0.20);
+}
+
 
 /* mouse over link */
 .title:hover {
@@ -39,7 +43,7 @@ a{
 }
 
 mat-card{
-  padding-bottom: 25%
+
 }
 mat-card-subtitle{
   font-family: 'Lora', cursive;
