--- a/GoDeliverFrontEnd/src/app/topselling/topselling.component.html
+++ b/GoDeliverFrontEnd/src/app/topselling/topselling.component.html
@@ -1,4 +1,5 @@
 <div class=container>
+  <h2 class="mt-3"> Top Selling </h2>
   <div *ngIf=books>
     <div class="row mb-3">
       <div class="col-sm-3 mb-5" *ngFor="let book of books | paginate: { itemsPerPage: 8, currentPage: p }">
