--- a/GoDeliverFrontEnd/src/app/timeslots /timeslots.component.html
+++ b/GoDeliverFrontEnd/src/app/timeslots /timeslots.component.html
@@ -3,38 +3,43 @@
    <div class="col-sm-8">
        <mat-card style="border-radius: 8px;margin-top:10px">
            <div class="row">
-               <div *ngFor="let slots of slotAvailability;let i=index,let j=index" style="padding-left:60px">
-                   <mat-card style="margin-top:0px;border-radius:8px; width:150px">
-                       <input type="radio" class="button" name="timeslots" [disabled]="!slots" (click)="radioselected()">
+               <div *ngFor="let slots of slotsFinal;let i=index" style="padding-left:60px">
+                   <mat-card style="margin-top:0px;border-radius:8px; width:200px">
+                       <input type="radio" class="button" name="timeslots" [disabled]="!slots.slotAvailability" (click)="radioselected(slots)">
                        <label style="padding-left:10px">{{timeslots[i]}}
                        </label>
-                       <div *ngIf="!slots">
+                       <div *ngIf="!slots.slotAvailability">
                            <p style="color:Red;padding-left:10px"> Unavailable</p>
                        </div>
-                       <div *ngIf="slots">
+                       <div *ngIf="slots.slotAvailability">
                            <p style="color:green;padding-left:10px">Available</p>
                        </div>
                        <div *ngIf="isRadioSelect1()">
-                        {{ slotCost[j]}}
-                           <div *ngIf="slots">
-                           <button style="background-color:deepskyblue;margin-top:20px;border-radius: 8px;margin-left:15px"
-                              >Confirm</button>
-                            </div>
+                           <!-- {{ slotCost[j]}} -->
+                           <div *ngIf="slots.slotAvailability">
+                               <div *ngIf="(slots.slotCosts==0)">
+                                   <p>free</p>
+                               </div>
+                               <div *ngIf="(slots.slotCosts!=0)">
+                                   <p>₹{{slots.slotCosts}}</p>
+                               </div>
+                           </div>
+
                        </div>
                    </mat-card>
                </div>
 
            </div>
            <div style="padding-left: 50px">
-           <button style="border-radius:8px;margin-top:60px;height:40px;margin-top:45px;">
-               <a class="link" (click)="billingRoute()">
-                   <p style="text-align: center;margin-top:5px"> Change Date?</p>
-               </a>
-           </button>
+               <button style="border-radius:8px;margin-top:60px;height:40px;margin-top:45px;">
+                   <a class="link" (click)="billingRoute()">
+                       <p style="text-align: center;margin-top:5px"> Change Date?</p>
+                   </a>
+               </button>
            </div>
        </mat-card>
    </div>
-   <div class="col-sm-4">
+<div class="col-sm-4">
        <mat-card class="order">
            <mat-card-title>
                <b>Order Details</b>
@@ -64,16 +69,24 @@
                                <h5>Delivery Charges</h5>
                            </td>
                            <td>
-                               <h5>Free</h5>
+                               <h5>{{slotFinalPrice}}</h5>
                            </td>
                        </tr>
+                       <tr>
+                               <td style="width: 400px">
+                                   <h5>Total Charges</h5>
+                               </td>
+                               <td>
+                                   <h5>{{finalPriceA}}</h5>
+                               </td>
+                           </tr>
                    </thead>
                </div>
            </mat-card-content>
        </mat-card>
    </div>
-   <button class="btn btn-primary btn-block" style="margin-top:20px" >
-       <a routerLink="/payment" style="color:white">Proceed To Payment</a>
+   <button (click)="paymentRoute()" class="btn btn-primary btn-block" style="margin-top:20px">
+     Proceed To Payment
    </button>
    <br>
    <br>
