--- a/GoDeliverFrontEnd/src/app/home/home.component.html
+++ b/GoDeliverFrontEnd/src/app/home/home.component.html
@@ -54,7 +54,7 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <a routerLink="/topselling">
-            <img src="assets/images.jpg" alt="Los Angeles" style="width:100%; height:35%;max-height: 400px">
+            <img src="assets/1.png" alt="Los Angeles" style="width:100%; height:55%;max-height: 400px">
             <div class="carousel-caption">
               <h3>Top Selling</h3>
               <p>Best sellers of all time!</p>
@@ -63,7 +63,7 @@
         </div>
         <div class="carousel-item">
           <a routerLink="/toprated">
-            <img src="assets/img.jpg" alt="Chicago" style="width:100%; height: 35%; max-height: 400px">
+            <img src="assets/2.jpg" alt="Chicago" style="width:100%; height: 55%; max-height: 400px">
             <div class="carousel-caption">
               <h3>Top Rated Book</h3>
               <p>Best rated books loved by all!</p>
@@ -72,7 +72,7 @@
         </div>
         <div class="carousel-item">
           <a routerLink="/allbooks">
-            <img src="assets/img1.png" alt="New York" style="width:100%;height: 35%; max-height: 400px">
+            <img src="assets/3.jpg" alt="New York" style="width:100%;height: 55%; max-height: 400px">
             <div class="carousel-caption">
               <h3>All books</h3>
               <p>Have a look to all the books at once!</p>
