register background changed

--- a/GoDeliverFrontEnd/src/app/header/header.component.html
+++ b/GoDeliverFrontEnd/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-lg bg-light m-0" id="nav">
+  <nav class="navbar navbar-expand-md bg-light m-0" id="nav">
     <a class="navbar-brand" routerLink="">
       <img src="assets/books.ico" alt="logo" style="width:35px; display: inline-block;">
       BooK<span class="logo-style">ShoP</span>
