--- a/GoDeliverFrontEnd/src/app/login/login.component.css
+++ b/GoDeliverFrontEnd/src/app/login/login.component.css
@@ -13,14 +13,25 @@
   top:30%;
 }
 .landing-background{
-  width: 100vw;
+  width:100%;
   position: relative;
   z-index: 0;
+  opacity: 0.7;
 }
 
-@media only screen and (min-width: 320px) {
+@media only screen and (max-width: 320px) {
+  .container-fluid {
+    text-align: center;
+    margin: 0 auto;
+    height: 75vh;
+    width: 100%;
+    position: absolute;
+    z-index: 1;
+  }
+
     .landing-background {
-      height: 100vh;
+      opacity: 0.7;
+      max-width: 100%;
       position: relative;
       z-index: 0;
     }
