--- a/GoDeliverFrontEnd/src/app/registration/registration.component.css
+++ b/GoDeliverFrontEnd/src/app/registration/registration.component.css
@@ -1,14 +1,33 @@
 .component-body{
   height:100%;
-  margin:2%;
+  background-size: contain;
 }
 
 .container-fluid {
   text-align: center;
   margin: 0 auto;
   width: 100%;
-  background-size: contain;
-  background-repeat: no-repeat;
+  position: absolute;
+  z-index: 1;
+  top: 20%;
+}
+
+.landing-background{
+  width:100%;
+  position: relative;
+  z-index: 0;
+  opacity: 0.7;
+}
+
+@media only screen and (max-width: 320px) {
+  .container-fluid {
+    text-align: center;
+    margin: 0 auto;
+    height: 75vh;
+    width: 100%;
+    position: absolute;
+    z-index: 1;
+  }
 }
 
 
