--- a/GoDeliverFrontEnd/src/app/registration/registration.component.html
+++ b/GoDeliverFrontEnd/src/app/registration/registration.component.html
@@ -1,5 +1,8 @@
 <!-- User registration HTML page-->
 <div class="component-body">
+  <video class="landing-background" autoplay muted loop>
+        <source src="../../assets/wallpaper.mp4" type="video/mp4">
+  </video>
   <div class="container-fluid">
     <div class="row justify-content-center">
       <div class="col-md-8">
